syntax = "proto3";

package demo.proto;

option java_package = "numbers.proto";
option java_outer_classname = "NumbersProto";

import "google/protobuf/empty.proto";

service BackpressureDemo {
    rpc SendNumbers (HowMany) returns (stream Number) {}
    rpc SendNumber (HowMany) returns (Number) {}
}

message HowMany {
    repeated int32 number = 1;
}

message Number {
    repeated int32 number = 1;
}